--------------------------------------------------------------------------------
drkns 2024-01-24 15:47:05+00:00 - build 6260

1. Refactoring.

2. More logging.

--------------------------------------------------------------------------------
drkns 2024-01-24 14:11:48+00:00 - build 6259

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-01-23 20:57:27+00:00 - build 6258

1. More gh-773.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-01-22 18:54:12+00:00 - build 6257

1. More gh-773.

2. More logging.

--------------------------------------------------------------------------------
drkns 2024-01-20 14:19:30+00:00 - build 6256

1. far:config hex mode fix.

--------------------------------------------------------------------------------
drkns 2024-01-20 14:05:54+00:00 - build 6255

1. Improve system error messages decoding.

--------------------------------------------------------------------------------
drkns 2024-01-19 17:32:24+00:00 - build 6254

1. Restore ExitFarW calls on plugins unload, dropped after 6139.
   Also forum: crash on manual unload of anamorphosis.dll.
   ExitFarW calls are meaningful, we can't just drop them.

2. Refactoring.

--------------------------------------------------------------------------------
zg 2024-01-18 14:38:15+02:00 - build 6253

1. copy progress dialog rendered according current size.

--------------------------------------------------------------------------------
yjh 2024-01-17 01:29:14+03:00 - build 6252

1. SQLite v3.45.0

--------------------------------------------------------------------------------
drkns 2024-01-14 18:33:02+00:00 - build 6251

1. gh-773: Preserve centered dialog state on console resize.

2. Cancelling dialog drag with right mouse click didn't work.

3. Refactoring.

--------------------------------------------------------------------------------