@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2024-01-27 16:45:12+00:00 - build 6261
+
+1. gh-783: Crash when opening a plugin via an association from a plugin panel.
+
+--------------------------------------------------------------------------------
 drkns 2024-01-24 15:47:05+00:00 - build 6260
 
 1. Refactoring.
